deployment/minikube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-service
spec:
  selector:
    app: chat-service
  ports:
    - protocol: TCP
      name: http
      port: 4000
