deployment/minikube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chat-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://localhost:5555, ionic://localhost"
spec:
  rules:
    - host: api.vid.app
      http:
        paths:
          - path: /api/chat
            pathType: Prefix
            backend:
              service:
                name: chat-service
                port:
                  number: 4000
          - path: /api/internal/chat
            pathType: Prefix
            backend:
              service:
                name: chat-service
                port:
                  number: 4000
